#36 Duplicate JavaFX libraries

--- a/tradista-client/pom.xml
+++ b/tradista-client/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.tradista.app</groupId>
@@ -19,8 +21,8 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.7.1</version>
 				<configuration>
 					<descriptors>
 						<descriptor>bin.xml</descriptor>
@@ -36,9 +38,8 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -46,9 +47,11 @@
 							<goal>run</goal>
 						</goals>
 						<configuration>
-							<tasks>
-								<zip destfile="${project.build.directory}/${project.build.finalName}.zip" basedir="${project.build.directory}/${project.build.finalName}-bin/${project.build.finalName}" />
-							</tasks>
+							<target>
+								<zip
+									destfile="${project.build.directory}/${project.build.finalName}.zip"
+									basedir="${project.build.directory}/${project.build.finalName}-bin/${project.build.finalName}" />
+							</target>
 						</configuration>
 					</execution>
 				</executions>
