--- a/tradista-model/pom.xml
+++ b/tradista-model/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.tradista.app</groupId>
@@ -11,26 +13,6 @@
 	<version>${core-model.version}</version>
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-install-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<groupId>org.quartz-scheduler</groupId>
-					<artifactId>quartz-jakarta-ee</artifactId>
-					<version>2.4.0</version>
-					<packaging>jar</packaging>
-					<file>${basedir}/lib/quartz-jakarta-ee-2.4.0.jar</file>
-				</configuration>
-				<executions>
-					<execution>
-						<id>install-jar-lib</id>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>validate</phase>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
@@ -47,10 +29,9 @@
 			<version>3.17.0</version>
 		</dependency>
 		<dependency>
-			<!-- Custom branch with jakarta packages made from quartz 2.4.0-SNAPSHOT-->
 			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz-jakarta-ee</artifactId>
-			<version>2.4.0</version>
+			<artifactId>quartz</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
