--- a/tradista-model/pom.xml
+++ b/tradista-model/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>4.1.6.RELEASE</version>
+			<version>6.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.platform</groupId>
