#208 The JavaFX-based client crashes during the loading animation on Linux

--- a/tradista-marketdata-app/pom.xml
+++ b/tradista-marketdata-app/pom.xml
@@ -31,7 +31,8 @@
 					<version>8</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
 					<applicationName>marketdata-app</applicationName>
-					<outputFileNameMapping>@{artifactId}@-@{version}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
+					<outputFileNameMapping>
+						@{artifactId}@-@{version}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
 				</configuration>
 			</plugin>
 		</plugins>
