--- a/tradista-ejb/pom.xml
+++ b/tradista-ejb/pom.xml
@@ -23,10 +23,14 @@
 			<artifactId>core-business</artifactId>
 			<version>${core-business.version}</version>
 		</dependency>
+		<!-- spring-dao is needed at runtime by Spring's SchedulerFactoryBean.
+		The exclusions are needed otherwise there's a conflict during class loading
+		that leads to a ClassNotFoundException -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-dao</artifactId>
 			<version>2.0.8</version>
+			<scope>runtime</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>*</groupId>
