#167 Provide a FIX based interface to import repo trades

--- a/tradista-common/pom.xml
+++ b/tradista-common/pom.xml
@@ -30,6 +30,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.core</groupId>
+			<artifactId>message-ejb-interface</artifactId>
+			<version>${message-ejb-interface.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.core</groupId>
 			<artifactId>position-ejb-interface</artifactId>
 			<version>${position-ejb-interface.version}</version>
 		</dependency>
