--- a/tradista-fix-common/pom.xml
+++ b/tradista-fix-common/pom.xml
@@ -25,8 +25,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.tradista.core</groupId>
-			<artifactId>core-model</artifactId>
-			<version>${core-model.version}</version>
+			<artifactId>core-business</artifactId>
+			<version>${core-business.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.quickfixj</groupId>
