--- a/tradista-fix-importer/src/main/resources/fixImporter.properties
+++ b/tradista-fix-importer/src/main/resources/fixImporter.properties
@@ -6,3 +6,7 @@ TargetCompID=TESTTARGET
 SocketAcceptPort=10000
 StartTime=00:00:00
 EndTime=00:00:00
+RightOfSubstitution=REPOSUB
+RightOfReuse=REUSE
+TerminableOnDemand=OPENTERM
+NoticePeriod=NOTPERIOD
