#167 Provide a FIX based interface to import repo trades

--- a/tradista-security-fix-importer/pom.xml
+++ b/tradista-security-fix-importer/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>fix-importer</artifactId>
 			<version>${fix-importer.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.security</groupId>
+			<artifactId>security-ejb-client</artifactId>
+			<version>${security-ejb-client.version}</version>
+		</dependency>
 	</dependencies>
 </project>
