#167 Provide a FIX based interface to import repo trades

--- a/tradista-parent/pom.xml
+++ b/tradista-parent/pom.xml
@@ -307,7 +307,7 @@
 					<generateApplicationXml>true</generateApplicationXml>
 					<version>8</version>
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
-					<applicationName>position-app</applicationName>
+					<applicationName>${project.artifactId}</applicationName>
 					<outputFileNameMapping>
 						@{artifactId}@-@{version}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
 				</configuration>
