--- a/tradista-web/pom.xml
+++ b/tradista-web/pom.xml
@@ -28,59 +28,33 @@
 			<groupId>org.eclipse.tradista.security</groupId>
 			<artifactId>security-business</artifactId>
 			<version>${security-business.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.tradista.security</groupId>
-			<artifactId>security-model</artifactId>
-			<version>${security-model.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.security</groupId>
 			<artifactId>security-ejb-client</artifactId>
 			<version>${security-ejb-client.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.tradista.mm</groupId>
-			<artifactId>mm-model</artifactId>
-			<version>${mm-model.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.mm</groupId>
 			<artifactId>mm-ejb-client</artifactId>
 			<version>${mm-ejb-client.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.tradista.ir</groupId>
-			<artifactId>ir-model</artifactId>
-			<version>${ir-model.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.ir</groupId>
 			<artifactId>ir-ejb-client</artifactId>
 			<version>${ir-ejb-client.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.tradista.fx</groupId>
-			<artifactId>fx-model</artifactId>
-			<version>${fx-model.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.fx</groupId>
 			<artifactId>fx-ejb-client</artifactId>
 			<version>${fx-ejb-client.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.2.1</version>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 	<repositories>
 		<repository>
 			<id>prime-repo</id>
