--- a/tradista-message-ejb/pom.xml
+++ b/tradista-message-ejb/pom.xml
@@ -19,6 +19,11 @@
 			<version>${core-persistence.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.tradista.core</groupId>
+			<artifactId>core-business</artifactId>
+			<version>${core-business.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.platform</groupId>
 			<artifactId>jakarta.jakartaee-api</artifactId>
 			<version>10.0.0</version>
@@ -27,7 +32,7 @@
 		<dependency>
 			<groupId>org.jboss.ejb3</groupId>
 			<artifactId>jboss-ejb3-ext-api</artifactId>
-			<version>2.3.0.Final</version>
+			<version>2.4.0.Final</version>
 		</dependency>
 	</dependencies>
 </project>
