--- a/tradista-fix-importer/pom.xml
+++ b/tradista-fix-importer/pom.xml
@@ -12,6 +12,11 @@
 	<artifactId>fix-importer</artifactId>
 	<version>${fix-importer.version}</version>
 	<dependencies>
+	<dependency>
+			<groupId>org.eclipse.tradista.core</groupId>
+			<artifactId>core-business</artifactId>
+			<version>${core-business.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.fix</groupId>
 			<artifactId>fix-common</artifactId>
