--- a/tradista-position-app/pom.xml
+++ b/tradista-position-app/pom.xml
@@ -18,6 +18,68 @@
 			<artifactId>position-ejb</artifactId>
 			<version>${position-ejb.version}</version>
 			<type>ejb</type>
+			<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.tradista.core</groupId>
+					<artifactId>core-model</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.tradista.ai</groupId>
+					<artifactId>ai-model</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.tradista.fx</groupId>
+					<artifactId>fx-model</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.tradista.ir</groupId>
+					<artifactId>ir-model</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.tradista.mm</groupId>
+					<artifactId>mm-model</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.eclipse.tradista.security</groupId>
+					<artifactId>security-model</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.core</groupId>
+			<artifactId>core-model</artifactId>
+			<version>${core-model.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.ai</groupId>
+			<artifactId>ai-model</artifactId>
+			<version>${ai-model.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.fx</groupId>
+			<artifactId>fx-model</artifactId>
+			<version>${fx-model.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.ir</groupId>
+			<artifactId>ir-model</artifactId>
+			<version>${ir-model.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.mm</groupId>
+			<artifactId>mm-model</artifactId>
+			<version>${mm-model.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.security</groupId>
+			<artifactId>security-model</artifactId>
+			<version>${security-model.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
