--- a/tradista-business/pom.xml
+++ b/tradista-business/pom.xml
@@ -15,12 +15,17 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.1</version>
+			<version>1.14.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.tradista.core</groupId>
 			<artifactId>core-common</artifactId>
 			<version>${core-common.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.core</groupId>
+			<artifactId>core-model-mapping</artifactId>
+			<version>${core-model-mapping.version}</version>
 		</dependency>
 	</dependencies>
 </project>
