--- a/tradista-fix-common/pom.xml
+++ b/tradista-fix-common/pom.xml
@@ -13,13 +13,13 @@
 	<version>${fix-common.version}</version>
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.tradista.core</groupId>
-			<artifactId>core-business</artifactId>
-			<version>${core-business.version}</version>
+			<groupId>org.quickfixj</groupId>
+			<artifactId>quickfixj-core</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.quickfixj</groupId>
-			<artifactId>quickfixj-all</artifactId>
+			<artifactId>quickfixj-messages-fix44</artifactId>
 			<version>2.3.2</version>
 		</dependency>
 	</dependencies>
