--- a/tradista-ai-app/pom.xml
+++ b/tradista-ai-app/pom.xml
@@ -43,6 +43,10 @@
 					<groupId>org.eclipse.tradista.security</groupId>
 					<artifactId>security-model</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
