--- a/tradista-importer-ejb/config/fixImporter.properties.sample
+++ b/tradista-importer-ejb/config/fixImporter.properties.sample
@@ -6,7 +6,9 @@ TargetCompID=TESTTARGET
 SocketAcceptPort=10000
 StartTime=00:00:00
 EndTime=00:00:00
+ResetOnLogon=Y
 RightOfSubstitution=REPOSUB
 RightOfReuse=REUSE
 TerminableOnDemand=OPENTERM
 NoticePeriod=NOTPERIOD
+FileStorePath=target/fixStore
