--- a/tradista-importer-ejb/config/fixImporter.properties.sample
+++ b/tradista-importer-ejb/config/fixImporter.properties.sample
@@ -7,8 +7,5 @@ SocketAcceptPort=10000
 StartTime=00:00:00
 EndTime=00:00:00
 ResetOnLogon=Y
-RightOfSubstitution=REPOSUB
-RightOfReuse=REUSE
-TerminableOnDemand=OPENTERM
-NoticePeriod=NOTPERIOD
 FileStorePath=target/fixStore
+DataDictionary=FIX44-TRADISTA.xml
