--- a/tradista-security-fix-importer/pom.xml
+++ b/tradista-security-fix-importer/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>security-ejb-client</artifactId>
 			<version>${security-ejb-client.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.tradista.security</groupId>
+			<artifactId>security-business</artifactId>
+			<version>${security-business.version}</version>
+		</dependency>
 	</dependencies>
 </project>
